--- a/src/components/survey/html/css/style.scss
+++ b/src/components/survey/html/css/style.scss
@@ -308,9 +308,43 @@
     overflow-y: auto;
     width: 100%;
   }
+
+
+
   .container_centering::-webkit-scrollbar {
-    width: 0px; /* Width of the scrollbar */
+    width: 12px; /* Set width of the scrollbar */
+    height: 12px; /* Set height for horizontal scrollbar */
   }
+
+  .container_centering::-webkit-scrollbar-thumb {
+      background-color: rgb(10, 124, 205); /* Color of the thumb */
+      border-radius: 10px; /* Round the thumb edges */
+      cursor: pointer;
+      border: 4px solid rgba(123, 31, 205, 0.8); /* Pink border around the thumb */
+  }
+
+  .container_centering::-webkit-scrollbar-track {
+      background-color: rgba(123, 31, 205, 0.8); /* Track color */
+      border-radius: 10px;
+  }
+
+  /* Optional: Customizing the scrollbar for Firefox */
+  scrollbar {
+      width: 12px;
+      height: 12px;
+  }
+
+  scrollbar-thumb {
+      background-color: dodgerblue;
+      border-radius: 10px;
+  }
+
+  scrollbar-track {
+      background-color: rgba(125, 127, 232, 0.8);
+      border-radius: 10px;
+  }
+
+
   @media (max-width: 991px) {
     .container_centering {
       padding: 110px 0 45px 0;
